[gd_scene load_steps=3 format=3 uid="uid://dysei8kliprig"]

[ext_resource type="Script" path="res://Simulation/simulation.gd" id="1_cqcgk"]
[ext_resource type="Texture2D" uid="uid://cl61lmw6fnuho" path="res://Art/selection.png" id="2_nwc2w"]

[node name="Simulation" type="Node2D" node_paths=PackedStringArray("run_button", "add_button", "ground_node", "fluid_node", "fluid_debug_node", "ground_debug_node", "total_debug_node", "selection_sprite", "simulation_timer", "iteration_label")]
script = ExtResource("1_cqcgk")
run_button = NodePath("CanvasLayer/MarginContainer/VBoxContainer/RunButton")
add_button = NodePath("CanvasLayer/MarginContainer/VBoxContainer/AddButton")
ground_node = NodePath("Ground")
fluid_node = NodePath("Fluid")
fluid_debug_node = NodePath("CanvasLayer/MarginContainer2/HBoxContainer/FluidVBoxContainer")
ground_debug_node = NodePath("CanvasLayer/MarginContainer2/HBoxContainer/GroundVBoxContainer")
total_debug_node = NodePath("CanvasLayer/MarginContainer2/HBoxContainer/TotalVBoxContainer")
selection_sprite = NodePath("Sprite2D")
simulation_timer = NodePath("Timer")
iteration_label = NodePath("CanvasLayer/MarginContainer/VBoxContainer/IterationLabel")

[node name="Ground" type="Node2D" parent="."]

[node name="Fluid" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_nwc2w")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="AddButton" type="CheckButton" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_direction = 3
layout_mode = 2
button_pressed = true
text = "Add"
alignment = 2

[node name="ClearButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="QuitButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="StepButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Step"

[node name="RunButton" type="CheckButton" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_direction = 3
layout_mode = 2
text = "Run"
alignment = 2

[node name="IterationLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "0001"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 81.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer2"]
layout_mode = 2

[node name="FluidVBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer2/HBoxContainer/FluidVBoxContainer"]
layout_mode = 2
text = "Fluid"

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="GroundVBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer2/HBoxContainer/GroundVBoxContainer"]
layout_mode = 2
text = "Ground"

[node name="Control2" type="Control" parent="CanvasLayer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="TotalVBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer2/HBoxContainer/TotalVBoxContainer"]
layout_mode = 2
text = "Total"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/StepButton" to="." method="_on_step_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/RunButton" to="." method="_on_check_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
